kubernetes/apps/fission/functions/ics-proxy/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ics-proxy
  namespace: fission
spec:
  hostnames:
    - fn.zebernst.dev
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: router
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /ics/proxy
